<resources>
    <string name="app_name">sqlite</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="txtView1">이름:</string>
    <string name="txtView2">인원:</string>

    <string name="btnInit">초기</string>
    <string name="btnInsert">입력</string>
    <string name="btnUpdate">수정</string>
    <string name="btnDelete">삭제</string>
    <string name="btnSearch">조회</string>

</resources>
